implementation_layer/api/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gaik-toolkit-api
  labels:
    app: gaik-toolkit-api
spec:
  selector:
    app: gaik-toolkit-api
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
